# tank-operator

./: .gitignore  .wall-probe  AGENTS.md  CLAUDE.md  Dockerfile  EGRESS_SMOKE.txt  README.md  all_schedule.jsonl  all_timers.jsonl  dogfood-check.txt  package-lock.json  pr-body.txt  scratch_schedule.jsonl  session725_timeline.json  sleep_logs.jsonl  tail.jsonl  task190_208.jsonl  task190_followup.jsonl  task208_followup.jsonl  task_35fd.jsonl  task_logs.jsonl  timer_logs.jsonl
.githooks/: post-commit  pre-push
.github/: pull_request_template.md
agent-container/: Dockerfile
agent-runner/: package-lock.json  package.json
antigravity-container/: Dockerfile  antigravity-runner-launch.sh
antigravity-runner/: package-lock.json  package.json
api-proxy/: pyproject.toml
api-proxy/src/tank_api_proxy/: __main__.py  github_ext_proc.py  github_governor.py  lease.py  metrics.py  server.py
api-proxy/tests/: test_github_governor.py  test_lease.py  test_metrics.py  test_server.py
backend/: pyproject.toml
backend-go/: .gitignore  go.mod  go.sum
backend/src/tank_operator/: __main__.py  api.py  auth.py  credentials_seed.py  exec_proxy.py  internal_api.py  profiles.py  session_events.py  sessions.py
backend/tests/: test_api_run_helpers.py  test_auth_gravatar.py  test_exec_proxy.py  test_glimmung_context_sessions.py  test_go_compat_fixture.py  test_internal_api.py  test_run_pod_wait.py  test_session_events.py  test_session_mcp_config.py  test_session_messaging.py
claude-container/: Dockerfile  Dockerfile.dockerignore  fetch-skills.py  tank-bootstrap.sh
claude-container/mcp-auth-proxy/: Dockerfile  pyproject.toml
claude-container/mcp-auth-proxy/src/mcp_auth_proxy/: metrics.py  server.py
claude-container/mcp-auth-proxy/tests/: test_create_session_pr.py  test_provision_test_slot_tool.py  test_server.py  test_watch_pr_tool.py
claude-container/mcp-tank/: AGENTS.md  README.md  pyproject.toml
claude-container/mcp-tank/src/mcp_tank/: __main__.py  tools.py
claude-container/terminald/: pyproject.toml
claude-container/terminald/src/tank_terminald/: __init__.py  server.py
claude-runner/: package-lock.json  package.json
codex-runner/: package-lock.json  package.json
desktop/: README.md  package-lock.json  package.json
docs/: agent-llm-task-splitting.md  api-proxy-auth.md  branch-lane-grants.md  design-system.md  diagnostic-discipline.md  event-driven-rollout.md  go-migration-plan.md  live-preview-sender.md  observability.md  product-inspirations.md  repo-selection.md  scheduled-turn-continuity.md  session-bus-auth.md  session-list-redesign.md  session-transcript-capture.md  tailnet-host-access.md  tank-conversation-protocol.md  tank-operator-design-skill.md  testing.md  verification-57-multi-user-routing.md
frontend/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts  vitest.config.ts  vitest.setup.ts
gemini-runner/: package-lock.json  package.json
infra/: api_proxy.tf  avatar_assets.tf  azure_data.tf  cosmos.tf  credential_refresher.tf  jwt_signing_key.tf  mcp.tf  nats.tf  oauth_app.tf  outputs.tf  postgres.tf  providers.tf  tank_session_identity.tf  terraform.tf  transcript_storage.tf  variables.tf
k8s/: Chart.yaml  values.yaml
k8s-arc-runners/: values.yaml
k8s-mcp-argocd/: values.yaml
k8s-mcp-azure/: values.yaml
k8s-mcp-github/: values.yaml
k8s-mcp-k8s/: values.yaml
mcp-servers/azure-admin/: Dockerfile  pyproject.toml
mcp-servers/azure-admin/src/mcp_azure_admin/: http.py  tools.py
runner/: Dockerfile
runner-shared/: backgroundTaskWake.d.ts  backgroundTaskWake.js  backgroundTaskWake.test.js  conversation-builders.d.ts  conversation-builders.js  conversation.d.ts  conversation.js  internalAuth.d.ts  internalAuth.js  operatorInternalRequest.js  package.json  providerFatal.d.ts  providerFatal.js  runtimeConfig.d.ts  runtimeConfig.js  scheduledWakeup.d.ts  scheduledWakeup.js  sessionBus.d.ts  sessionBus.js  sessionNotify.d.ts  sessionNotify.js  transcriptDownload.d.ts  transcriptDownload.js  transcriptUpload.d.ts  transcriptUpload.js  turnQueue.d.ts  turnQueue.js
schemas/: tank-conversation-event.fixtures.json  tank-conversation-event.schema.json
scratch/: smoke-1160.md
scripts/: audit-session-events.py  check-api-proxy-envoy-sds.sh  check-askuserquestion-migration.mjs  check-claude-agent-authority.mjs  check-context-window-table-migration.mjs  check-control-action-authz.mjs  check-removed-chat-runtime.mjs  check-removed-hot-swap-verify-gate.mjs  check-removed-live-preview-v1.mjs  check-removed-pr-lane.mjs  check-removed-test-slot-agent-provisioning.mjs  check-session-image-common-tools.mjs  check-session-pod-hot-swap-migration.mjs  check-session-readonly-rbac.mjs  check-stop-request-migration.mjs  check-tank-conversation-contract.mjs  check-tank-http-route-security.mjs  check-test-slot-provider-credentials.sh  classify-tank-test-fidelity.mjs  clean-session-events.py  debug-avatar-upload.sh  fetch-jp1-avatars.sh  gen-github-egress-cidrs.py  image-fingerprint.sh  install-agent-git-hooks.sh  install-agent-post-commit-reminder.sh  migrate-session-events-timeline-id.py  normalize-jp1-avatars.py  (+13 more)
(+931 files in other folders)
