[project]
name = "tank-operator"
version = "0.1.0"
description = "Web frontend over a K8s orchestrator that spawns ephemeral agent pods."
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115",
  "uvicorn[standard]>=0.32",
  "kubernetes-asyncio>=31.1.0",
  "pyjwt[crypto]>=2.9.0",
  "httpx>=0.27",
  # Used by the break-glass credentials_seed.py to write the
  # captured Anthropic OAuth blob to KV. Steady-state rotation lives
  # in the api-proxy, not this process. Authenticated via workload
  # identity (DefaultAzureCredential picks up the AKS-injected env
  # vars and SA-token file).
  "azure-identity>=1.19",
  "azure-keyvault-secrets>=4.9",
  # Per-user profile storage in Cosmos DB (#57). Same workload-identity
  # auth path as the KV writer above; the orchestrator UAMI carries both
  # role assignments. async client (azure.cosmos.aio).
  "azure-cosmos>=4.7",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/tank_operator"]
