[project]
name = "mcp-auth-proxy"
version = "0.1.0"
description = "Localhost reverse proxy that injects fresh bearer auth for Tank MCP servers."
requires-python = ">=3.10"
dependencies = [
    "aiohttp>=3.9",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mcp_auth_proxy"]

[project.scripts]
mcp-auth-proxy = "mcp_auth_proxy.__main__:main"
