[project]
name = "mcp-auth-proxy"
version = "0.1.0"
description = "Localhost reverse proxy that injects fresh bearer auth for Tank MCP servers."
requires-python = ">=3.10"
dependencies = [
    "aiohttp>=3.9",
    "prometheus-client>=0.20",
]

[project.optional-dependencies]
test = ["pytest>=8"]

[tool.pytest.ini_options]
# Run the suite against the in-tree package under src/ so `python -m pytest`
# tests the working copy even when mcp-auth-proxy is installed non-editably
# (e.g. the baked session image). CI installs `-e` so this is a no-op there.
pythonpath = ["src"]
testpaths = ["tests"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mcp_auth_proxy"]

[project.scripts]
mcp-auth-proxy = "mcp_auth_proxy.__main__:main"
