[project]
name = "tank-terminald"
version = "0.1.0"
description = "Pod-local terminal WebSocket fanout for tank-operator sessions."
requires-python = ">=3.12"
dependencies = [
  "aiohttp>=3.10",
]

[project.scripts]
tank-terminald = "tank_terminald.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/tank_terminald"]
