[project]
name = "mcp-azure-admin"
version = "0.1.0"
description = "Guarded destructive Azure cleanup tools for tank-operator sessions."
requires-python = ">=3.10"
dependencies = [
    "azure-identity>=1.25.1",
    "mcp>=1.18.0",
    "requests>=2.32.0",
    "starlette>=0.40.0",
    "uvicorn>=0.30.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mcp_azure_admin"]

[project.scripts]
mcp-azure-admin-http = "mcp_azure_admin.http:main"
